# PowerTunerDaemon

./: .gitmodules  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml
.github/workflows/: build_tests.yml
src/: main.cpp
src/Daemon/: PowerTunerDaemon.cpp  PowerTunerDaemon.h  SignalNotifier.h
src/Daemon/Linux/: PowerTunerDaemonLinux.cpp  PowerTunerDaemonLinux.h
src/Daemon/Windows/: PowerTunerDaemonWindows.cpp  PowerTunerDaemonWindows.h  SVCSigHandler.h  SVCWorker.cpp  SVCWorker.h
src/Device/: Device.cpp  Device.h
src/Device/CPU/: CPUDevice.cpp  CPUDevice.h  CPUDeviceFactory.cpp  CPUDeviceFactory.h  CPURegister.h
src/Device/CPU/AMD/: AMDCPU.cpp  AMDCPU.h
src/Device/CPU/AMD/Includes/: RegistersInlcudes.h
src/Device/CPU/AMD/Registers/: MSR_CORE_PERFORMANCE_BOOST.h  MSR_CPPC_CAPABILITY_1.h  MSR_CPPC_ENABLE.h  MSR_CPPC_REQUEST.h  MSR_PSTATE_CONTROL.h  MSR_PSTATE_CURRENT_LIMIT.h
src/Device/CPU/AMD/SMU/: RyzenAdj.cpp  RyzenAdj.h
src/Device/CPU/Intel/: IntelCPU.cpp  IntelCPU.h
src/Device/CPU/Intel/Include/: CPUFamily.h  CPUModel.h  HWPActivityWindowBits.h  ModelRegistersIncludes.h  PlatformInfoData.h  PowerLimitRawTimeWindow.h  RegistersIncludes.h
src/Device/CPU/Intel/MCHBAR/: MCHBAR.cpp  MCHBAR.h  MCHBARRegister.h  MCHBARUtils.cpp  MCHBARUtils.h
src/Device/CPU/Intel/Registers/: IA32_ENERGY_PERF_BIAS.h  IA32_HWP_CAPABILITIES.h  IA32_HWP_CTL.h  IA32_HWP_REQUEST.h  IA32_HWP_REQUEST_PKG.h  IA32_MISC_ENABLE.h  IA32_PACKAGE_THERM_STATUS.h  IA32_PM_ENABLE.h  MCHBAR_PACKAGE_POWER_SKU_UNIT.h  MCHBAR_RP_STATE_CAP.h  MSR_PKG_POWER_LIMIT.h  MSR_PP0_POLICY.h  MSR_PP1_CURRENT_CONFIG.h  MSR_PP1_POLICY.h  MSR_RAPL_POWER_UNIT.h  MSR_TURBO_POWER_CURRENT_LIMIT.h  MSR_TURBO_RATIO_LIMIT.h
src/Device/CPU/Intel/Registers/MCHBAR_PACKAGE_RAPL_LIMIT/: MCHBAR_PACKAGE_RAPL_LIMIT.h  MCHBAR_PACKAGE_RAPL_LIMIT_IVB.h  MCHBAR_PACKAGE_RAPL_LIMIT_TGL.h
src/Device/CPU/Intel/Registers/MSR_MISC_PWR_MGMT/: MSR_MISC_PWR_MGMT.h  MSR_MISC_PWR_MGMT_NHLM.h
src/Device/CPU/Intel/Registers/MSR_PKG_CST_CONFIG_CONTROL/: MSR_PKG_CST_CONFIG_CONTROL.h  MSR_PKG_CST_CONFIG_CONTROL_CU1.h  MSR_PKG_CST_CONFIG_CONTROL_SB.h
src/Device/CPU/Intel/Registers/MSR_PLATFORM_INFO/: MSR_PLATFORM_INFO.h  MSR_PLATFORM_INFO_IVB.h  MSR_PLATFORM_INFO_NHLM.h
src/Device/CPU/Intel/Registers/MSR_POWER_CTL/: MSR_POWER_CTL.h  MSR_POWER_CTL_CU1.h  MSR_POWER_CTL_NHLM.h  MSR_POWER_CTL_SB.h
src/Device/CPU/Intel/Registers/MSR_TEMPERATURE_TARGET/: MSR_TEMPERATURE_TARGET.h  MSR_TEMPERATURE_TARGET_NHLM.h
src/Device/CPU/Intel/Registers/MSR_UNK_FIVR_CONTROL/: MSR_UNK_FIVR_CONTROL.h  MSR_UNK_FIVR_CONTROL_ICL.h
src/Device/CPU/Intel/Registers/MSR_VR_CURRENT_CONFIG/: MSR_VR_CURRENT_CONFIG.h  MSR_VR_CURRENT_CONFIG_CU1.h  MSR_VR_CURRENT_CONFIG_SB.h
src/Device/CPU/Intel/Utils/: IntelRegisterUtils.cpp  IntelRegisterUtils.h
src/Device/CPU/Utils/: CPUUtils.cpp  CPUUtils.h
src/Device/CPU/Utils/MSR/: MSR.h  MSRFactory.h  MSRNull.h
src/Device/CPU/Utils/MSR/OS/Linux/: MSRLinux.cpp  MSRLinux.h
src/Device/CPU/Utils/MSR/OS/Windows/: MSRWindows.cpp  MSRWindows.h
src/Device/CPU/Utils/Memory/: Memory.h  MemoryFactory.h  MemoryNull.h
src/Device/CPU/Utils/Memory/OS/Linux/: MemoryLinux.cpp  MemoryLinux.h
src/Device/CPU/Utils/Memory/OS/Windows/: MemoryWindows.cpp  MemoryWindows.h
src/Device/FAN/: CPUFANDevice.h  FANDevice.cpp  FANDevice.h  FANFactory.cpp  FANFactory.h
src/Device/FAN/GPD/: GPDDUOFanBoard.h  GPDMPC2FanBoard.h  GPDWin4FanBoard.h  GPDWinMax2FanBoard.h  GPDWinMiniFanBoard.h
src/Device/FAN/Include/: FanBoard.h  FanControls.h  FanType.h
src/Device/GPU/: GPUDevice.cpp  GPUDevice.h  GPUDeviceFactory.cpp  GPUDeviceFactory.h
src/Device/GPU/AMD/: AMDGPU.h
src/Device/GPU/Intel/: IntelGPU.h
src/Device/GPU/NVIDIA/: NVIDIAGPU.h
src/Device/OS/: OS.cpp  OS.h  OSFactory.cpp  OSFactory.h
src/Device/OS/Linux/: DBusServices.cpp  DBusServices.h  OSLinux.cpp  OSLinux.h
src/Device/OS/Windows/: OSWindows.cpp  OSWindows.h
src/DiskManagers/: DaemonSettingDiskManager.cpp  DaemonSettingDiskManager.h  ProfileDiskManager.cpp  ProfileDiskManager.h
src/DiskManagers/ProfileUtils/FAN/: ProfileFanUtils.cpp  ProfileFanUtils.h
src/DiskManagers/ProfileUtils/OS/: ProfileLinuxAMDUtils.cpp  ProfileLinuxAMDUtils.h  ProfileLinuxUtils.cpp  ProfileLinuxUtils.h  ProfileWindowsUtils.cpp  ProfileWindowsUtils.h
src/Resources/: version.h.in
src/Resources/Windows/: win.rc.in
src/Service/: DaemonService.cpp  DaemonService.h
src/Service/PowerNotifications/: PowerNotifications.h  PowerNotificationsFactory.h
src/Service/PowerNotifications/Linux/: PowerNotificationsLinux.cpp  PowerNotificationsLinux.h
src/Service/PowerNotifications/Windows/: PowerNotificationsWindows.cpp  PowerNotificationsWindows.h
src/Service/Workers/: ServiceWorker.cpp  ServiceWorker.h
src/Utils/: AppDataPath.cpp  AppDataPath.h  DaemonUtils.cpp  DaemonUtils.h  ProcessStatus.h
src/Utils/FileLogger/: FileLogger.cpp  FileLogger.h
